improve performance, error handling